Rename fki to os2 on .html demo file

--- a/public_html/profiles/os2intra/themes/fki/index.html
+++ b/public_html/profiles/os2intra/themes/fki/index.html
@@ -14,8 +14,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <h1>Available panel panes</h1>
-                <div class="fki-box">
-                    <div class="fki-box-body">
+                <div class="os2-box">
+                    <div class="os2-box-body">
                         <table class="table table-bordered table-striped">
                             <thead>
                             <tr>
@@ -56,17 +56,17 @@
 
             <!-- Begin - default box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Default box</h3>
+                <div class="os2-box">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Default box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="fki-box-footer fki-footer-elements">
-                        <span class="fki-footer-element"><span class="icon fa fa-eye"></span> set af 12 personer</span>
-                        <span class="fki-footer-element"><span class="icon fa fa-comment"></span> 3 kommentarer</span>
+                    <div class="os2-box-footer os2-footer-elements">
+                        <span class="os2-footer-element"><span class="icon fa fa-eye"></span> set af 12 personer</span>
+                        <span class="os2-footer-element"><span class="icon fa fa-comment"></span> 3 kommentarer</span>
                     </div>
                 </div>
             </div>
@@ -74,16 +74,16 @@
 
             <!-- Begin - watermarked box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box fki-box-watermarked">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Watermarked box</h3>
+                <div class="os2-box os2-box-watermarked">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Watermarked box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="fki-box-footer fki-footer-elements">
-                        <span class="fki-footer-element pull-right"><span class="icon fa fa-eye"></span> set af 7 personer</span>
+                    <div class="os2-box-footer os2-footer-elements">
+                        <span class="os2-footer-element pull-right"><span class="icon fa fa-eye"></span> set af 7 personer</span>
                     </div>
                 </div>
             </div>
@@ -91,8 +91,8 @@
 
             <!-- Begin - content box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box">
-                    <div class="fki-box-body">
+                <div class="os2-box">
+                    <div class="os2-box-body">
                         <h3>Content box</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt u   abore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -111,16 +111,16 @@
 
             <!-- Begin - primary box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box fki-box-primary">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Primary box</h3>
+                <div class="os2-box os2-box-primary">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Primary box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="fki-box-footer fki-footer-elements">
-                        <span class="fki-footer-element"><span class="icon fa fa-eye-slash"></span> ikke set endnu</span>
+                    <div class="os2-box-footer os2-footer-elements">
+                        <span class="os2-footer-element"><span class="icon fa fa-eye-slash"></span> ikke set endnu</span>
                     </div>
                 </div>
             </div>
@@ -128,11 +128,11 @@
 
             <!-- Begin - secondary box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box fki-box-secondary">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Secondary box</h3>
+                <div class="os2-box os2-box-secondary">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Secondary box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
@@ -142,11 +142,11 @@
 
             <!-- Begin - tertiary box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box fki-box-tertiary">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Tertiary box</h3>
+                <div class="os2-box os2-box-tertiary">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Tertiary box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
@@ -159,11 +159,11 @@
 
             <!-- Begin - quaternary box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box fki-box-quaternary">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Quaternary box</h3>
+                <div class="os2-box os2-box-quaternary">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Quaternary box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
@@ -173,11 +173,11 @@
 
             <!-- Begin - quinary box -->
             <div class="col-xs-12 col-sm-4">
-                <div class="fki-box fki-box-quinary">
-                    <div class="fki-box-heading">
-                        <h3 class="fki-box-heading-title">Quinary box</h3>
+                <div class="os2-box os2-box-quinary">
+                    <div class="os2-box-heading">
+                        <h3 class="os2-box-heading-title">Quinary box</h3>
                     </div>
-                    <div class="fki-box-body">
+                    <div class="os2-box-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
@@ -198,15 +198,15 @@
 
             <!-- Begin - no image -->
             <div class="col-xs-12 col-sm-3">
-                <div class="fki-teaser fki-spotbox-teaser">
-                    <div class="fki-teaser-image">
+                <div class="os2-teaser os2-spotbox-teaser">
+                    <div class="os2-teaser-image">
                         <img src="dist/img/demo/spotbox.jpg" alt="" class="img-responsive">
                     </div>
-                    <div class="fki-teaser-heading">
-                        <h3 class="fki-teaser-heading-title">Default</h3>
+                    <div class="os2-teaser-heading">
+                        <h3 class="os2-teaser-heading-title">Default</h3>
                     </div>
-                    <div class="fki-teaser-body">
-                        <div class="fki-teaser-body-text">
+                    <div class="os2-teaser-body">
+                        <div class="os2-teaser-body-text">
                             <p>Lorem ipsum dolor sit amet. Consecteturdolore magna aliqua.</p>
                         </div>
                     </div>
@@ -216,15 +216,15 @@
 
             <!-- Begin - with image -->
             <div class="col-xs-12 col-sm-3">
-                <div class="fki-teaser fki-spotbox-teaser fki-spotbox-teaser-variant-with-image">
-                    <div class="fki-teaser-image">
+                <div class="os2-teaser os2-spotbox-teaser os2-spotbox-teaser-variant-with-image">
+                    <div class="os2-teaser-image">
                         <img src="dist/img/demo/spotbox.jpg" alt="" class="img-responsive">
                     </div>
-                    <div class="fki-teaser-heading">
-                        <h3 class="fki-teaser-heading-title">With image</h3>
+                    <div class="os2-teaser-heading">
+                        <h3 class="os2-teaser-heading-title">With image</h3>
                     </div>
-                    <div class="fki-teaser-body">
-                        <div class="fki-teaser-body-text">
+                    <div class="os2-teaser-body">
+                        <div class="os2-teaser-body-text">
                             <p>Lorem ipsum dolor sit amet. Consecteturdolore magna aliqua.</p>
                         </div>
                     </div>
@@ -250,8 +250,8 @@
 
             <!-- Begin - extra small size -->
             <div class="col-xs-12">
-                <div class="fki-box">
-                    <div class="fki-box-body">
+                <div class="os2-box">
+                    <div class="os2-box-body">
                         <a href="#" class="btn btn-xs btn-default">btn-xs btn-default</a>
                         <a href="#" class="btn btn-xs btn-primary">btn-xs btn-primary</a>
                         <a href="#" class="btn btn-xs btn-secondary">btn-xs btn-secondary</a>
@@ -273,8 +273,8 @@
 
             <!-- Begin - small size -->
             <div class="col-xs-12">
-                <div class="fki-box">
-                    <div class="fki-box-body">
+                <div class="os2-box">
+                    <div class="os2-box-body">
                         <a href="#" class="btn btn-sm btn-default">btn-sm btn-default</a>
                         <a href="#" class="btn btn-sm btn-primary">btn-sm btn-primary</a>
                         <a href="#" class="btn btn-sm btn-secondary">btn-sm btn-secondary</a>
@@ -296,8 +296,8 @@
 
             <!-- Begin - default size -->
             <div class="col-xs-12">
-                <div class="fki-box">
-                    <div class="fki-box-body">
+                <div class="os2-box">
+                    <div class="os2-box-body">
                         <a href="#" class="btn btn-default">btn-default</a>
                         <a href="#" class="btn btn-primary">btn-primary</a>
                         <a href="#" class="btn btn-secondary">btn-secondary</a>
@@ -319,8 +319,8 @@
 
             <!-- Begin - large size -->
             <div class="col-xs-12">
-                <div class="fki-box">
-                    <div class="fki-box-body">
+                <div class="os2-box">
+                    <div class="os2-box-body">
                         <a href="#" class="btn btn-lg btn-default">btn-lg btn-default</a>
                         <a href="#" class="btn btn-lg btn-primary">btn-lg btn-primary</a>
                         <a href="#" class="btn btn-lg btn-secondary">btn-lg btn-secondary</a>
