--- a/public_html/mobile-application/index.html
+++ b/public_html/mobile-application/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OS2 Notifier</title>
+	<title>Fredericia Kommune</title>
 
 	<meta charset="utf-8" />
 	<meta name="format-detection" content="telephone=no" />
@@ -27,7 +27,7 @@
 
 <!-- Mobile Application Splash Screen -->
 <div id="_drupalgap_splash" data-role="page">
-	 <div data-role="header" data-theme="b"><h2>OS2 Notifier</h2></div>
+	 <div data-role="header" data-theme="b"><h2>Fredericia Kommune</h2></div>
 	 <div class="ui-content" data-role="content">
 		<div id="_drupalgap_splash_content">
 			<img src="images/fredericia.png" alt="fredericia" style="position: absolute; top: 50%; left: 50%; margin-left: -64px; margin-top: -64px;" />
