--- a/public_html/profiles/os2intra/themes/fki/index.html
+++ b/public_html/profiles/os2intra/themes/fki/index.html
@@ -5,6 +5,7 @@
     <title>intranet.fredericia.dk</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="dist/css/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/custom-styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
